Bug 3414 - RMX breaks mouse position on Dell Server
Summary: RMX breaks mouse position on Dell Server
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Felix Kuehling
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-05-27 15:08 UTC by Felix Kuehling
Modified: 2005-05-27 04:16 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Don't use RMX if we are Dell Server (560 bytes, patch)
2005-05-27 15:11 UTC, Felix Kuehling
no flags Details | Splinter Review

Description Felix Kuehling 2005-05-27 15:08:52 UTC
On Dell Server the mouse position is incorrect if RMX is used.
The obvious fix is to disable RMX on Dell Server. I'll attach a patch and commit
it to CVS.
Comment 1 Felix Kuehling 2005-05-27 15:11:11 UTC
Created attachment 2782 [details] [review]
Don't use RMX if we are Dell Server
Comment 2 Felix Kuehling 2005-05-27 21:16:44 UTC
Fixed in CVS.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.