Fix for bugzilla https://bugs.freedesktop.org/show_bug.cgi?id=3414 (patch     https://bugs.freedesktop.org/attachment.cgi?id=2782): Don't use RMX if     we are Dell Server.